// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Stack] navigator should renders [Dark] mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "black",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "width": "100%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "white",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                Object {
                                  "marginTop": 100,
                                },
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "white",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "white",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "72%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityState={
                              Object {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                            testID="btn-login"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "white",
                                    "borderBottomColor": "white",
                                    "borderLeftColor": "white",
                                    "borderRightColor": "white",
                                    "borderTopColor": "white",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Object {
                                    "height": 24,
                                    "left": 12,
                                    "position": "absolute",
                                    "width": 24,
                                  }
                                }
                              />
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "black",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Login
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              Object {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                            testID="btn-navigate"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "white",
                                    "borderBottomColor": "white",
                                    "borderLeftColor": "white",
                                    "borderRightColor": "white",
                                    "borderTopColor": "white",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "black",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Navigate to Temp
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              Object {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                            testID="btn-theme"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "white",
                                    "borderBottomColor": "white",
                                    "borderLeftColor": "white",
                                    "borderRightColor": "white",
                                    "borderTopColor": "white",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "black",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Change theme
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                      style={Object {}}
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            Object {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "zIndex": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              Object {
                                "backgroundColor": "black",
                                "borderBottomColor": "rgb(216, 216, 216)",
                                "flex": 1,
                                "shadowColor": "rgb(216, 216, 216)",
                                "shadowOffset": Object {
                                  "height": 0.5,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.85,
                                "shadowRadius": 0,
                              }
                            }
                          />
                        </View>
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            Object {
                              "height": 44,
                              "maxHeight": undefined,
                              "minHeight": undefined,
                              "opacity": undefined,
                              "transform": undefined,
                            }
                          }
                        >
                          <View
                            pointerEvents="none"
                            style={
                              Object {
                                "height": 0,
                              }
                            }
                          />
                          <View
                            pointerEvents="box-none"
                            style={
                              Object {
                                "alignItems": "stretch",
                                "flex": 1,
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                Object {
                                  "alignItems": "flex-start",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginStart": 0,
                                }
                              }
                            />
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                Object {
                                  "justifyContent": "center",
                                  "marginHorizontal": 16,
                                  "maxWidth": 718,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="header"
                                aria-level="1"
                                collapsable={false}
                                numberOfLines={1}
                                onLayout={[Function]}
                                style={
                                  Object {
                                    "color": "white",
                                    "fontSize": 17,
                                    "fontWeight": "600",
                                  }
                                }
                              >
                                Intro
                              </Text>
                            </View>
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginEnd": 0,
                                }
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`[Stack] navigator should renders without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "white",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "black",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  Intro
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "white",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "width": "100%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "black",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                Object {
                                  "marginTop": 100,
                                },
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "black",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "black",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          >
                            
                          </Text>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "72%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityState={
                              Object {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                            testID="btn-login"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "black",
                                    "borderBottomColor": "black",
                                    "borderLeftColor": "black",
                                    "borderRightColor": "black",
                                    "borderTopColor": "black",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Object {
                                    "height": 24,
                                    "left": 12,
                                    "position": "absolute",
                                    "width": 24,
                                  }
                                }
                              />
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "white",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Login
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              Object {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                            testID="btn-navigate"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "black",
                                    "borderBottomColor": "black",
                                    "borderLeftColor": "black",
                                    "borderRightColor": "black",
                                    "borderTopColor": "black",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "white",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Navigate to Temp
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              Object {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                            testID="btn-theme"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "black",
                                    "borderBottomColor": "black",
                                    "borderLeftColor": "black",
                                    "borderRightColor": "black",
                                    "borderTopColor": "black",
                                  },
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    Array [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  Array [
                                    Object {
                                      "color": "white",
                                    },
                                    Array [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Change theme
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
